syntax = "proto3";

package com.shengsiyuan.grpc;

option java_multiple_files = true;
option java_package = "com.shengsiyuan.grpc.generated";
option java_outer_classname = "StudentProto";


service StudentService {
    rpc GetRealnameByUsername (MyRequest) returns (MyResponse) {}

    rpc GetStudentsByAge(StudentRequest) returns (stream StudentResponse) {}

    rpc GetStudentsWrapperByAges(stream StudentRequest) returns (StudentResponseList) {}

    rpc BiTalk(stream StreamRequest) returns (stream StreamResponse) {}
}

message MyRequest {
    string username = 1;
}

message MyResponse {
    string realname = 1;
}

message StudentRequest {
    int32 age = 1;
}

message StudentResponse {
    string name = 1;
    int32 age = 2;
    string city = 3;
}

message StudentResponseList {
    repeated StudentResponse studentResponse = 1;
}

message StreamRequest {
    string request_info = 1;
}

message StreamResponse {
    string response_info = 1;
}